<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44.0dip"
    android:background="@color/color_f3f3f3"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/rl_left_tab"
        android:layout_width="0.0dip"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_left_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shanghuye_tab"
            android:textColor="@color/color_000000"
            android:textSize="15.0sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:background="@drawable/img_line"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/rl_right_tab"
        android:layout_width="0.0dip"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_right_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cheyuanye_tab"
            android:textColor="@color/color_000000"
            android:textSize="15.0sp" />
    </RelativeLayout>

</LinearLayout>